--- a/css/custom.css
+++ b/css/custom.css
@@ -68,6 +68,13 @@ p {
   height: 80vh;
   margin: 0 0 0 0;
   }
+
+  .index-img{
+    width: 100%;
+    height: 100%;
+    margin: 0 0 0 0;
+  }
+
 .index-link-container{
   align-self: center;
 }
@@ -78,11 +85,7 @@ p {
 .div4 { grid-area: 1 / 2 / 4 / 3; }
 
 
-.index-img{
-  width: 10px;
-  height: 10px;
-  margin: 0 0 0 0;
-}
+
 
 
 /* ABOUT page */
