--- a/css/custom.css
+++ b/css/custom.css
@@ -50,18 +50,25 @@ p {
   font-family: inherit;
 }
 
-/* INDEX page */
-.index-content{
+/* INDEX & ABOUT page */
+.index-content, .about-content{
 
   display: grid;
   grid-template-columns: .5fr .75fr;
   grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 30px;
   grid-row-gap: 30px;
-  height: 100vh;
+  /* height: 100vh; */
   width: 100%
 
 }
+
+.index1, .about1 { grid-area: 1 / 1 / 2 / 2; }
+.index2, .about2 { grid-area: 2 / 1 / 3 / 2; }
+.index3, .about3 { grid-area: 3 / 1 / 4 / 2; }
+.div4 { grid-area: 1 / 2 / 4 / 3; }
+
+/* INDEX page */
 
 .index-img-container{
   width: 100%;
@@ -69,7 +76,7 @@ p {
   margin: 0 0 0 0;
   }
 
-  .index-img{
+  .index-img, .about-img{
     width: 100%;
     height: 100%;
     margin: 0 0 0 0;
@@ -79,28 +86,14 @@ p {
   align-self: center;
 }
 
-.index1 { grid-area: 1 / 1 / 2 / 2; }
-.index2 { grid-area: 2 / 1 / 3 / 2; }
-.index3 { grid-area: 3 / 1 / 4 / 2; }
-.div4 { grid-area: 1 / 2 / 4 / 3; }
-
-
-
-
 
 /* ABOUT page */
-.about-container{
-  margin-top: 5vh;
-  margin-bottom: 15vh;
-  height: 100vh;
-
-}
-
-.about-content{
+.about-paragraph-container{
   width: 100%;
   height: 100%;
-  margin: 0 0 0 0;
+
 }
+
 
 /* all project page */
 
@@ -157,7 +150,7 @@ footer {
   background: #42d7ff;
   display: grid;
   place-items: center;
-  padding: 200px;
+  padding: 5vh;
 }
 
 
