added page headers

--- a/css/custom.css
+++ b/css/custom.css
@@ -48,11 +48,11 @@ p {
   height: 100%;
 }
 
-.index-link{
-  font-size: 2rem;
-  color: red;
-  font-family: inherit;
+.page-header{
+
 }
+
+
 
 /* INDEX & ABOUT page */
 .index-content, .about-content{
@@ -88,6 +88,12 @@ p {
 
 .index-link-container{
   align-self: center;
+}
+
+.index-link{
+  font-size: 2rem;
+  color: red;
+  font-family: inherit;
 }
 
 
