--- a/css/custom.css
+++ b/css/custom.css
@@ -55,7 +55,7 @@ p {
 
 
 /* INDEX & ABOUT page */
-.index-content, .about-content{
+.about-content{
 
   display: grid;
   grid-template-columns: .5fr .75fr;
@@ -67,12 +67,32 @@ p {
 
 }
 
-.index1, .about1 { grid-area: 1 / 1 / 2 / 2; }
-.index2, .about2 { grid-area: 2 / 1 / 3 / 2; }
-.index3, .about3 { grid-area: 3 / 1 / 4 / 2; }
+.about1 { grid-area: 1 / 1 / 2 / 2; }
+.about2 { grid-area: 2 / 1 / 3 / 2; }
+.about3 { grid-area: 3 / 1 / 4 / 2; }
 .div4 { grid-area: 1 / 2 / 4 / 3; }
 
 /* INDEX page */
+.index-content {
+display: grid;
+grid-template-columns: .25fr .75fr;
+grid-template-rows: .50fr repeat(3, 1fr);
+grid-column-gap: 30px;
+grid-row-gap: 30px;
+width: 100%
+margin: auto;
+padding: 0 10rem;
+}
+
+
+.div-row { grid-area: 1 / 1 / 2 / 3; }
+.index1 { grid-area: 2 / 1 / 3 / 2; }
+.index2 { grid-area: 3 / 1 / 4 / 2; }
+.index3 { grid-area: 4 / 1 / 5 / 2; }
+.index-img-div { grid-area: 2 / 2 / 5 / 3; }
+
+
+
 
 .index-img-container{
   width: 100%;
@@ -88,6 +108,7 @@ p {
 
 .index-link-container{
   align-self: center;
+  /* text-align: center; */
 }
 
 .index-link{
