--- a/css/custom.css
+++ b/css/custom.css
@@ -52,10 +52,55 @@ p {
 
 }
 
+.col-nav-links{
+  display: flex;
+  justify-content: space-between;
+}
 
 
-/* INDEX & ABOUT page */
-.about-content{
+/* INDEX page */
+.index-grid {
+display: grid;
+grid-template-columns: .25fr .75fr;
+grid-template-rows: .50fr repeat(3, 1fr);
+grid-column-gap: 30px;
+grid-row-gap: 30px;
+width: 100%
+margin: auto;
+padding: 0 10rem;
+}
+
+  .index-img, .about-img{
+    width: 100%;
+    height: 100%;
+    margin: 0 0 0 0;
+  }
+
+.index-link-container{
+  align-self: center;
+  /* text-align: center; */
+  margin: auto;
+}
+
+.index-link{
+  font-size: 2rem;
+  color: redrgb(13, 172, 231);
+  font-family: inherit;
+}
+.row-index-links{
+  display: flex;
+  flex-direction: column;
+}
+
+
+/* ABOUT page */
+.about-paragraph-container{
+  width: 100%;
+  height: 100%;
+
+}
+
+.about-grid{
 
   display: grid;
   grid-template-columns: .5fr .75fr;
@@ -72,59 +117,6 @@ p {
 .about3 { grid-area: 3 / 1 / 4 / 2; }
 .div4 { grid-area: 1 / 2 / 4 / 3; }
 
-/* INDEX page */
-.index-content {
-display: grid;
-grid-template-columns: .25fr .75fr;
-grid-template-rows: .50fr repeat(3, 1fr);
-grid-column-gap: 30px;
-grid-row-gap: 30px;
-width: 100%
-margin: auto;
-padding: 0 10rem;
-}
-
-
-.div-row { grid-area: 1 / 1 / 2 / 3; }
-.index1 { grid-area: 2 / 1 / 3 / 2; }
-.index2 { grid-area: 3 / 1 / 4 / 2; }
-.index3 { grid-area: 4 / 1 / 5 / 2; }
-.index-img-div { grid-area: 2 / 2 / 5 / 3; }
-
-
-
-
-.index-img-container{
-  width: 100%;
-  height: 80vh;
-  margin: 0 0 0 0;
-  }
-
-  .index-img, .about-img{
-    width: 100%;
-    height: 100%;
-    margin: 0 0 0 0;
-  }
-
-.index-link-container{
-  align-self: center;
-  /* text-align: center; */
-}
-
-.index-link{
-  font-size: 2rem;
-  color: red;
-  font-family: inherit;
-}
-
-
-/* ABOUT page */
-.about-paragraph-container{
-  width: 100%;
-  height: 100%;
-
-}
-
 
 /* all project page */
 
@@ -139,18 +131,18 @@ padding: 0 10rem;
   margin-bottom: 15vh;
 
 }
-.project-hero {
+.project-hero-container {
   width: 100%;
-  height: 40vh;
+  height: 500px;
   margin: 0 0 20vh 0;
 }
 
-.project-hero-img-container{
+.project-img-container{
   width: 100%;
-  height: 30vh;
+  height: 100%;
   margin: 0 0 0 0;
 }
-.project-hero-img {
+.project-img {
   width: 100%;
   height: 100%;
   margin: 0 0 0 0;
