--- a/css/custom.css
+++ b/css/custom.css
@@ -43,6 +43,10 @@ p {
   margin: 0 0 2vh 0;
 }
 
+.logotype-img{
+  width: 70%
+}
+
 .img-container {
   width: 100%;
   height: 100%;
@@ -76,10 +80,10 @@ padding: 0 10rem;
     margin: 0 0 0 0;
   }
 
-.index-link-container{
-  align-self: center;
+.index-text-container{
+  /* align-self: center; */
   /* text-align: center; */
-  margin: auto;
+  margin: auto 0;
 }
 
 .index-link{
@@ -87,7 +91,7 @@ padding: 0 10rem;
   color: redrgb(13, 172, 231);
   font-family: inherit;
 }
-.row-index-links{
+.col-index-text{
   display: flex;
   flex-direction: column;
 }
