--- a/css/custom.css
+++ b/css/custom.css
@@ -13,14 +13,11 @@ body {
 main {
   /* make sure to cover the screen */
   min-height: 100vh;
-
   /* need a solid bg to hide the footer */
   background: white;
-
   /* put on top */
   position: relative;
   z-index: 1;
-
   padding: 2rem;
 }
 
@@ -78,27 +75,15 @@ p {
 }
 
 /* INDEX page */
-.index-grid {
-display: grid;
-grid-template-columns: .25fr .75fr;
-grid-template-rows: .50fr repeat(3, 1fr);
-grid-column-gap: 30px;
-grid-row-gap: 30px;
-width: 100%
-margin: auto;
-padding: 0 10rem;
-}
 
-  .index-img, .about-img{
+.index-img{
     width: 100%;
     height: 100%;
     margin: 0 0 0 0;
   }
 
 .index-text-container{
-  /* align-self: center; */
-  /* text-align: center; */
-  /* margin: auto 0; */
+
 }
 
 .index-link{
@@ -109,41 +94,31 @@ padding: 0 10rem;
 .col-index-text{
   display: flex;
   flex-direction: column;
-  transition: transform 1s;
 }
 
-
-/* ABOUT page */
-.about-paragraph-container{
-  width: 100%;
-  height: 100%;
-
-}
-
-.about-grid{
-
-  display: grid;
-  grid-template-columns: .5fr .75fr;
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
-  /* height: 100vh; */
-  width: 100%
-
-}
-
-.about1 { grid-area: 1 / 1 / 2 / 2; }
-.about2 { grid-area: 2 / 1 / 3 / 2; }
-.about3 { grid-area: 3 / 1 / 4 / 2; }
-.div4 { grid-area: 1 / 2 / 4 / 3; }
 
 
 /* all project page */
 
-.all-project-container{
-  height: 100vh;
+.all-project-img-container{
+
 }
 
+.all-project-img{
+  height: 100%;
+  width: 100%;
+  border: 5px solid rgb(9, 14, 20);
+
+}
+
+.all-project-text-container{
+
+}
+
+.col-all-project-text{
+  display: flex;
+  flex-direction: column;
+}
 
 /* project page */
 .project-container{
