--- a/css/custom.css
+++ b/css/custom.css
@@ -41,7 +41,7 @@ p {
 }
 
 .logotype-img{
-  width: 70%
+  width: 100%
 }
 
 .img-container {
@@ -55,9 +55,15 @@ p {
 
 .col-nav-links{
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
+
+
+.main-nav-link{
+
+}
 .nav-bar{
   margin-bottom: 3rem;
 }
@@ -107,7 +113,7 @@ p {
 .all-project-img{
   height: 100%;
   width: 100%;
-  border: 5px solid rgb(9, 14, 20);
+  /* border: 5px solid rgb(9, 14, 20); */
 
 }
 
@@ -164,8 +170,8 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-
-  background: #42d7ff;
+  color: white;
+  background: radial-gradient(circle at 9.44% -7.92%, #00b9e2 0, #00b9f8 3.33%, #00b8ff 6.67%, #00b6ff 10%, #00b4ff 13.33%, #00b1ff 16.67%, #00adff 20%, #00a8ff 23.33%, #00a1ff 26.67%, #0099ff 30%, #0090ff 33.33%, #4c85ff 36.67%, #8f78ff 40%, #b86aff 43.33%, #d859ff 46.67%, #f146f9 50%, #ff2ee4 53.33%, #ff00cd 56.67%, #ff00b5 60%, #ff009e 63.33%, #ff0086 66.67%, #ff006f 70%, #ff0058 73.33%, #ff2041 76.67%, #ff3b28 80%, #ff4f00 83.33%, #ff5f00 86.67%, #f36d00 90%, #e37a00 93.33%, #d18500 96.67%, #be8e00 100%);
   display: grid;
   place-items: center;
   padding: 5vh;
@@ -173,3 +179,17 @@ footer {
 
 
 /* ~~~~ TEST CODE ~~~~ */
+
+.module-border-wrap{
+  padding: .5rem;
+}
+.module-border-wrap:hover,.module-border-wrap:focus{
+  padding: .5rem;
+  position: relative;
+  background: radial-gradient(circle at 9.44% -7.92%, #00b9e2 0, #00b9f8 3.33%, #00b8ff 6.67%, #00b6ff 10%, #00b4ff 13.33%, #00b1ff 16.67%, #00adff 20%, #00a8ff 23.33%, #00a1ff 26.67%, #0099ff 30%, #0090ff 33.33%, #4c85ff 36.67%, #8f78ff 40%, #b86aff 43.33%, #d859ff 46.67%, #f146f9 50%, #ff2ee4 53.33%, #ff00cd 56.67%, #ff00b5 60%, #ff009e 63.33%, #ff0086 66.67%, #ff006f 70%, #ff0058 73.33%, #ff2041 76.67%, #ff3b28 80%, #ff4f00 83.33%, #ff5f00 86.67%, #f36d00 90%, #e37a00 93.33%, #d18500 96.67%, #be8e00 100%);
+}
+
+.module {
+  background: #ffffff;
+  padding: .5rem;
+}
