--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,4 @@
 /* BODY */
-
 body {
   margin: 0;
 }
@@ -9,7 +8,6 @@ body {
 }
 
 /* MAIN */
-
 main {
   /* make sure to cover the screen */
   min-height: 100vh;
@@ -22,20 +20,17 @@ main {
 }
 
 /* TEXT */
-
 p {
   margin: 0 auto 1rem;
 }
 
 /* BOOTSTRAP */
-
 .card-deck {padding: 10vw 10vw 0vw 10vw}
 
 
 /* !!! CUSTOM CSS !!! */
 
-/* all pages */
-
+/* ALL PAGES */
 .logotype{
   margin: 0 0 2vh 0;
 }
@@ -53,35 +48,33 @@ p {
 
 }
 
-.col-nav-links{
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-
-
-.main-nav-link{
-
-}
-.nav-bar{
+.main-nav{
+/* adds space below nav */
   margin-bottom: 3rem;
 }
 
-.row-content{
-
+.col-nav-links{
+/* makes nav flex column with even spacing */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
+
+.main-nav-link{
+/* selects a tags in nav */
+}
+
+
 
 .link-to-project-page{
   /* display: contents; */
 }
 
 .link-to-project-page:hover{
-  transform: rotate(25deg);
+
 }
 
 /* INDEX page */
-
 .index-img{
     width: 100%;
     height: 100%;
@@ -98,14 +91,12 @@ p {
   font-family: inherit;
 }
 .col-index-text{
-  display: flex;
-  flex-direction: column;
+
 }
 
 
 
-/* all project page */
-
+/* ALL PROJECT page */
 .all-project-img-container{
 
 }
@@ -116,17 +107,22 @@ p {
   /* border: 5px solid rgb(9, 14, 20); */
 
 }
-
-.all-project-text-container{
-
-}
-
 .col-all-project-text{
+/* selects bootstrap col */
   display: flex;
   flex-direction: column;
+  justify-content: start;
 }
 
-/* project page */
+.all-project-text-container{
+/* selects project discriptions/text */
+}
+
+.all-projects-btn{
+
+}
+
+/* PROJECT page */
 .project-container{
   margin-top: 5vh;
   margin-bottom: 15vh;
@@ -186,6 +182,8 @@ footer {
 .module-border-wrap:hover,.module-border-wrap:focus{
   padding: .5rem;
   position: relative;
+  /* changes cursor */
+  cursor: pointer;
   background: radial-gradient(circle at 9.44% -7.92%, #00b9e2 0, #00b9f8 3.33%, #00b8ff 6.67%, #00b6ff 10%, #00b4ff 13.33%, #00b1ff 16.67%, #00adff 20%, #00a8ff 23.33%, #00a1ff 26.67%, #0099ff 30%, #0090ff 33.33%, #4c85ff 36.67%, #8f78ff 40%, #b86aff 43.33%, #d859ff 46.67%, #f146f9 50%, #ff2ee4 53.33%, #ff00cd 56.67%, #ff00b5 60%, #ff009e 63.33%, #ff0086 66.67%, #ff006f 70%, #ff0058 73.33%, #ff2041 76.67%, #ff3b28 80%, #ff4f00 83.33%, #ff5f00 86.67%, #f36d00 90%, #e37a00 93.33%, #d18500 96.67%, #be8e00 100%);
 }
 
