still working on responsive font sizes

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,7 @@
 /* BODY */
-body {
+body, h1, h2, h3 {
   margin: 0;
+  font-size: calc(16px + .5vw)
 }
 
 * {
@@ -19,12 +20,17 @@ main {
   /* padding: 10rem 10rem; */
 }
 
+.row{
+  /* removes default right margin on rows */
+  margin-right: 0;
+}
+
 .logotype{
-text-align: left;
+  text-align: left;
 }
 
 .logotype-img{
-  width: 2.5em;
+  width: 4em;
 
 }
 
@@ -36,6 +42,7 @@ text-align: left;
   z-index: 100;
   width: 100%;
   text-align: end;
+  font-size: .5em;
 }
 
 .col-nav-links{
@@ -51,21 +58,13 @@ text-align: left;
 
 /* TEXT */
 p {
-  margin: 0 auto 1rem;
+  margin: 0 auto 1em;
 }
 
-.index-text-container, .about-p, .about-h1, .about-h2{
-  font-size: 1em;
-}
-
-
-.col-index-text{
+.about-container{
 
 }
 
-.index-text-container{
-
-}
 
 .about-p{
 
@@ -82,10 +81,11 @@ p {
   height: 100em;
 }
 
-.index-img{
+.about-img{
     width: 100%;
     height: 100%;
     margin: 0 0 0 0;
+    border-radius: 4px;
   }
 
 .card{
@@ -107,7 +107,8 @@ p {
   color: #fff;
   background-color: #3431D6;
   border-color: #3431D6;
-  font-size: .7rem;
+  font-size: 1em;
+  padding: .5em;
 }
 
 .btn:hover{
@@ -127,6 +128,14 @@ p {
   font-size: .5em;
   padding: .7em
 }
+/* /MONOTYPE PAGE */
+.mono-hero-container{
+  height: 100vh;
+}
+
+.mono-h1 {
+  font-size: calc(16px + 7vw)
+}
 
 /* FOOTER */
 
@@ -139,7 +148,12 @@ footer {
   color: white;
   background: radial-gradient(circle at 9.44% -7.92%, #00b9e2 0, #00b9f8 3.33%, #00b8ff 6.67%, #00b6ff 10%, #00b4ff 13.33%, #00b1ff 16.67%, #00adff 20%, #00a8ff 23.33%, #00a1ff 26.67%, #0099ff 30%, #0090ff 33.33%, #4c85ff 36.67%, #8f78ff 40%, #b86aff 43.33%, #d859ff 46.67%, #f146f9 50%, #ff2ee4 53.33%, #ff00cd 56.67%, #ff00b5 60%, #ff009e 63.33%, #ff0086 66.67%, #ff006f 70%, #ff0058 73.33%, #ff2041 76.67%, #ff3b28 80%, #ff4f00 83.33%, #ff5f00 86.67%, #f36d00 90%, #e37a00 93.33%, #d18500 96.67%, #be8e00 100%);
   /* pads the thing */
-  padding: 5vh;
+  padding: 2em;
+  font-size: .5em;
+}
+
+.icon-container{
+  text-align: center;
 }
 
 /* selects footer icons */
@@ -154,12 +168,12 @@ footer {
   text-decoration: none;
 }
 
-.icon-container{
-  text-align: center;
-}
+
 
 .footer-p{
   cursor: default;
+  padding: 0;
+  margin: 0;
 }
 
 
