--- a/css/custom.css
+++ b/css/custom.css
@@ -4,12 +4,46 @@ body {
   font-size: 16px
 }
 
+
+
+/*Heading styling*/
+
 /* h1{
   font-size: calc(16px + 2vw);
 } */
 * {
   box-sizing: border-box;
 }
+
+h1, h2 {font-family: 'Lato', sans-serif; margin: 0}
+
+h1, h2, h3, p {color: #0B0D3D}
+.name-header {font-weight: 700;font-size: 2rem}
+.title-header {color: #444CDF; padding-top: 10px; font-weight: 400; font-size: 1.3rem}
+.name-header, .title-header {margin: 0px}
+h1 {font-weight: 700;font-size: 2rem}
+h2 {font-weight: 400;font-size: 1.3rem}
+h3 {font-weight: 200;font-size: .6rem}
+p {}
+
+h3 {margin: 0px; font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2rem;}
+
+.section-link {font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2rem; color: #0B0D3D}
+
+a:link {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline; color: #444CDF
+}
+
+a:active {
+  text-decoration: underline;
+}
+
+.hide{display: none;}
+
 
 /* MAIN */
 main {
