--- a/css/custom.css
+++ b/css/custom.css
@@ -17,7 +17,7 @@ body {
 
 h1, h2 {font-family: 'Lato', sans-serif; margin: 0}
 
-h1, h2, h3, p {color: #0B0D3D}
+h1, h2, h3, p {color: #2fc536}
 .name-header {font-weight: 700;font-size: 2rem}
 .title-header {color: #444CDF; padding-top: 10px; font-weight: 400; font-size: 1.3rem}
 .name-header, .title-header {margin: 0px}
@@ -26,7 +26,6 @@ h2 {font-weight: 400;font-size: 1rem}
 h3 {font-weight: 400;font-size: .6rem}
 p {}
 
-h3 {margin: 0px; font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2rem;}
 
 .section-link {font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2rem; color: #0B0D3D}
 
