--- a/css/custom.css
+++ b/css/custom.css
@@ -15,6 +15,13 @@ body {
   box-sizing: border-box;
 }
 
+h1{font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2rem; color: #0ed32f}
+h2{}
+h3{}
+h4{}
+
+p{}
+
 
 .section-link {font-family: 'Lato', sans-serif; font-weight: 300; font-size: 2rem; color: #0B0D3D}
 
