--- a/css/custom.css
+++ b/css/custom.css
@@ -18,19 +18,17 @@ body {
 h1{ font-family: 'Lato', sans-serif; 
     font-weight: 900; 
     font-size: 2.3rem;
-    margin-bottom: none;
+    margin-bottom: 5rem;
     line-height: none;
     margin-top: none;
-    margin-bottom: none;
     color: #283cee;
 }
 h2{ font-family: 'Lato', sans-serif; 
     font-weight: 700; 
     font-size: 1rem;
-    margin-bottom: none;
+    margin-bottom: 1.2rem;
     line-height: none;
     margin-top: none;
-    margin-bottom: none;
     color: none;
 }
 h3{ font-family: 'Lato', sans-serif; 
@@ -39,17 +37,15 @@ h3{ font-family: 'Lato', sans-serif;
     margin-bottom: none;
     line-height: none;
     margin-top: none;
-    margin-bottom: none;
   color: #283cee;}
 /* h4{} */
 
 p{ font-family: 'Lato', sans-serif; 
     font-weight: 300; 
-    font-size: 1.2rem;
+    font-size: 1rem;
     margin-bottom: none;
     line-height: none;
     margin-top: none;
-    margin-bottom: none;
   }
 
 
@@ -98,7 +94,7 @@ main {
 
 .main-nav{
 /* adds space below nav */
-  margin: 1rem 0;
+  margin: 2rem 0 0 2rem;
   position: fixed;
   top: 0;
   z-index: 100;
