--- a/css/custom.css
+++ b/css/custom.css
@@ -124,9 +124,9 @@ p {
 } */
 
 
-/* .about-p{
-
-} */
+.about-p{
+  font-size: 1.5rem;
+}
 
 .index-link{
   font-size: 2rem;
@@ -140,7 +140,7 @@ p {
 }
 
 .about-img{
-    width: 100%;
+    width: 20%;
     margin: 0 0 0 0;
     border-radius: 4px;
   }
