--- a/css/custom.css
+++ b/css/custom.css
@@ -124,8 +124,12 @@ p {
 } */
 
 
-.about-p{
+/* .about-p{
   font-size: 1.5rem;
+} */
+
+.hero-p{
+  font-size: 2rem;
 }
 
 .index-link{
@@ -141,7 +145,7 @@ p {
 
 .about-img{
     display: block;
-    width: 20%;
+    width: 35%;
     margin: 0 0 0 0;
     border-radius: 4px;
   }
