--- a/css/custom.css
+++ b/css/custom.css
@@ -8,20 +8,17 @@ body {
 
 /*Heading styling*/
 
-/* h1{
-  font-size: calc(16px + 2vw);
-} */
 * {
   box-sizing: border-box;
 }
 
 h1{ font-family: 'Lato', sans-serif; 
-    font-weight: 900; 
+    font-weight: 500; 
     font-size: 2.3rem;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
     line-height: none;
     margin-top: none;
-    color: #283cee;
+    color: #7d869c;
 }
 h2{ font-family: 'Lato', sans-serif; 
     font-weight: 700; 
@@ -94,7 +91,7 @@ main {
 
 .main-nav{
 /* adds space below nav */
-  margin: 2rem 0 0 2rem;
+  margin: 20rem 0 0 2rem;
   position: fixed;
   top: 0;
   z-index: 100;
@@ -108,6 +105,9 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  line-height: 5rem;
+  font-family: lato;
+  font-weight: 400;
 }
 
 .main-nav-link{
@@ -130,6 +130,11 @@ p {
 
 .hero-p{
   font-size: 1.8rem;
+}
+
+.hero-a-tag{
+  color: #7d869c;
+
 }
 
 .index-link{
