--- a/css/custom.css
+++ b/css/custom.css
@@ -12,8 +12,8 @@ body {
   box-sizing: border-box;
 }
 
-h1{ font-family: 'Lato', sans-serif; 
-    font-weight: 500; 
+h1{ font-family: 'Alata', sans-serif; 
+    font-weight:; 
     font-size: 2.3rem;
     margin-bottom: 3rem;
     line-height: none;
@@ -94,13 +94,13 @@ main {
   margin: 20rem 0 0 2rem;
   position: fixed;
   top: 0;
-  z-index: 100;
+  z-index: -100;
   width: 100%;
   text-align: end;
   font-size: .5em;
 }
 
-.col-nav-links{
+.nav-link-group{
 /* makes nav flex column with even spacing */
   display: flex;
   flex-direction: column;
@@ -108,10 +108,11 @@ main {
   line-height: 5rem;
   font-family: lato;
   font-weight: 400;
+  font-size: 1.1rem;
 }
 
-.main-nav-link{
-  color: black;
+.nav-link{
+  color: #7d869c;
 }
 
 /* TEXT */
