adjusting font sizes

--- a/css/custom.css
+++ b/css/custom.css
@@ -14,21 +14,21 @@ body {
 
 h1{ font-family: 'Alata', sans-serif; 
     font-weight:; 
-    font-size: 2.3rem;
+    font-size: 2.488rem;
     margin-bottom: 3rem;
     line-height: none;
     margin-top: none;
     color: #7d869c;
 }
-h2{ font-family: 'Lato', sans-serif; 
+h2{ font-family: 'Alata', sans-serif; 
     font-weight: 700; 
-    font-size: 1rem;
+    font-size: 1.44rem;
     margin-bottom: 1.2rem;
     line-height: none;
     margin-top: none;
     color: none;
 }
-h3{ font-family: 'Lato', sans-serif; 
+h3{ font-family: 'Alata', sans-serif; 
     font-weight: 600; 
     font-size: 1rem;
     margin-bottom: none;
@@ -53,7 +53,7 @@ a:link {
 }
 
 a:hover {
-  text-decoration: underline; color: #444CDF
+  text-decoration: underline;
 }
 
 a:active {
@@ -94,7 +94,7 @@ main {
   margin: 20rem 0 0 2rem;
   position: fixed;
   top: 0;
-  z-index: -100;
+  z-index: 100;
   width: 100%;
   text-align: end;
   font-size: .5em;
@@ -130,7 +130,7 @@ p {
 } */
 
 .hero-p{
-  font-size: 1.8rem;
+  font-size: 2.074rem;
 }
 
 .hero-a-tag{
