--- a/css/custom.css
+++ b/css/custom.css
@@ -13,7 +13,7 @@ body {
 }
 
 h1{ font-family: 'Alata', sans-serif; 
-    font-weight:; 
+    /* font-weight:;  */
     font-size: 2.488rem;
     margin-bottom: 3rem;
     line-height: none;
@@ -214,7 +214,7 @@ footer {
   left: 0;
   /* colors the darn thing */
   color: white;
-  background: radial-gradient(circle at 9.44% -7.92%, #00b9e2 0, #00b9f8 3.33%, #00b8ff 6.67%, #00b6ff 10%, #00b4ff 13.33%, #00b1ff 16.67%, #00adff 20%, #00a8ff 23.33%, #00a1ff 26.67%, #0099ff 30%, #0090ff 33.33%, #4c85ff 36.67%, #8f78ff 40%, #b86aff 43.33%, #d859ff 46.67%, #f146f9 50%, #ff2ee4 53.33%, #ff00cd 56.67%, #ff00b5 60%, #ff009e 63.33%, #ff0086 66.67%, #ff006f 70%, #ff0058 73.33%, #ff2041 76.67%, #ff3b28 80%, #ff4f00 83.33%, #ff5f00 86.67%, #f36d00 90%, #e37a00 93.33%, #d18500 96.67%, #be8e00 100%);
+  background: #7d869c;
   /* pads the thing */
   padding: 2em;
   font-size: .5em;
