--- a/css/custom.css
+++ b/css/custom.css
@@ -92,7 +92,7 @@ main {
 
 .main-nav{
 /* adds space below nav */
-  margin: 20rem 0 0 2rem;
+  margin: 10rem 0 0 2rem;
   position: fixed;
   top: 0;
   width: 100%;
@@ -105,7 +105,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  line-height: 5rem;
+  /* line-height: 5rem; */
   font-family: lato;
   font-weight: 400;
   font-size: 1.1rem;
@@ -113,6 +113,7 @@ main {
 
 .nav-link{
   color: #7d869c;
+  margin-bottom: 2rem;
 }
 
 .nav-link:hover{
