--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,8 @@
 /* BODY */
 body {
   margin: 0;
-  font-size: 16px
+  font-size: 16px;
+  background-image: image('images\edited-profile-pic.png');
 }
 
 
